# ET_ACO_PROJECT

ET-ACO-MQTT-HTTP-V20-main/: .env  Cargo.toml  Dockerfile
ET-ACO-MQTT-HTTP-V20-main/src/: main.rs
ET-ACO-MQTT-HTTP-V20-main/src/controllers/: create_device.rs  get_devices.rs  mod.rs  update_device_parameters.rs
ET-ACO-MQTT-HTTP-V20-main/src/db/: db_operations.rs
ET-ACO-MQTT-HTTP-V20-main/src/hashmap/: map_storage.rs
ET-ACO-MQTT-HTTP-V20-main/src/models/: device.rs
ET-ACO-MQTT-HTTP-V20-main/src/mqtt/: mqtt_client.rs
ET-ACO-MQTT-main/: .env  Cargo.toml  Dockerfile
ET-ACO-MQTT-main/src/: main.rs
ET-ACO-MQTT-main/src/db/: db_operations.rs
ET-ACO-MQTT-main/src/models/: device.rs  device_initial_params_ack.rs  device_settings.rs  manifold_refills.rs  manifold_shifts.rs  mod.rs  sensor_alerts.rs  status_updates.rs
ET-ACO-MQTT-main/src/mqtt/: mod.rs  mqtt_operations.rs
main/: docker-compose.yml
main/mosquitto/: mosquitto.conf
