[package]
name = "emtantra_http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
dotenv = "0.15.0"
mongodb = {version="3.0.1"}
serde={version="1.0.204",features=["derive"]}
serde_json = "1.0.121"
rumqttc = "0.24.0"
chrono="0.4.38"
thiserror = "1.0.63"

